assets/css/messages.css
:root {
    --border: #E2E2E2;
    --bg: #FDFCF8;
    --muted: #999;
    --accent: #ffc97a;
    --accent-soft: rgba(255, 201, 122, 0.13);
    --active-bg: #FFC97A;
    --active-bg-light : rgba(255, 201, 122, 0.13);
}

/* =====================
   BASE LAYOUT
   ===================== */

/* body {
    
} */

header,
nav,
.navbar {
    flex-shrink: 0;
}

/* Messages outer div fills all space below navbar */
.messages-outer-div {
    flex: 1;
    min-height: 0;
    overflow: hidden;
    display: flex;
    flex-direction: column;
    border: 1px solid var(--border);
    height: 90vh;
    /* overflow: hidden; */
    margin: 0;
}

/* Bootstrap chain must pass height down */
.messages-outer-div>.container,
.messages-outer-div>.container>.row {
    height: 100%;
    min-height: 0;
}

.messages-outer-div .col-lg-4,
.messages-outer-div .col-lg-8 {
    height: 100%;
    overflow: hidden;
}

/* =====================
   SIDEBAR
   ===================== */

aside.sidebar {
    border-right: 1px solid var(--border);
    height: 100%;
    overflow: hidden;
    display: flex;
    flex-direction: column;
}

.sidebar-outer-div {
    max-width: 380px;
    height: 100%;
    display: flex;
    flex-direction: column;
    padding: 0 16px;
}
.settings-archived,
.dots-svg{
    position: relative;
}
.archived,
.archived-chat {
    border-radius: 5px 0 5px 5px;
    border: 1px solid #D9D9D9;
    background: #FFF;
    padding: 10px;
    width: 166px;
    height: 48px;
    position: absolute;
    right: 0px;
    top: 28px;
    visibility: hidden;
    opacity: 0;
    transition: opacity 0.2s ease;
}

.archived.show,
.archived-chat.show {
    visibility: visible;
    opacity: 1;
}

.tab-wrapper {
    flex: 1;
    min-height: 0;
    display: flex;
    flex-direction: column;
}

.tabcontent {
    flex: 1;
    min-height: 0;
    display: flex;
    flex-direction: column;
}

.chat-list {
    flex: 1;
    min-height: 0;
    overflow-y: auto;
    overflow-x: hidden;
}

.chat-list-wrapper {
    overflow-y: auto;
    padding-right: 27px;
    width: 392px;
}

/* Chrome, Safari, Edge */
.chat-list-wrapper::-webkit-scrollbar {
    width: 8px;
}

.chat-list-wrapper::-webkit-scrollbar-thumb {
    background: var(--active-bg);
    border-radius: 6px;
}

.chat-list-wrapper::-webkit-scrollbar-track {
    background: transparent;
}

/* Firefox */
.chat-list-wrapper {
    scrollbar-width: thin;
    scrollbar-color: var(--active-bg) transparent;
                     /* thumb color  ^   track color ^ */
}
.tabs {
    display: flex;
    background: #F8F8F8;
    border-radius: 96px;
    padding: 4px;
}

.tabs a {
    flex: 1;
    border: 0;
    background: transparent;
    padding: 14px 20px;
    border-radius: 96px;
    cursor: pointer;
    text-align: center;
    color: #9D9B98;
    font-family: Lato;
    font-size: 16px;
    font-weight: 500;
}

.tabs .active {
    background: var(--active-bg);
    color: #fff;
    font-size: 16px;
    font-weight: 600;
}

.search-box {
    position: relative;
}

.search-icon {
    position: absolute;
    right: 12px;
    top: 50%;
    transform: translateY(-50%);
    font-size: 18px;
}

.filter {
    border-radius: 100px;
    background: var(--active-bg-light);
    border: 1px solid rgba(246, 168, 127, 0.15);
    color: var(--active-bg);
    padding: 6px 10px;
    text-align: center;
    font-family: "Lato";
    font-size: 14px;
    font-style: normal;
    font-weight: 400;
    line-height: normal;
}

.filter.active {
    background: var(--active-bg);
    color: #fff;
}

.chat-card {
    width: 100%;
    height: auto;
    border-radius: 10px;
    padding: 20px;
}

.chat-card.unread {
    background: #F8F8F8;
}

.chat-card.locked {
    opacity: 0.4;
}

.chat-info {
    width: 100%;
}

.profile-image-wrapper {
    position: relative;
}

.top-left-svg {
    position: absolute;
    top: 0;
}

.rounded-image {
    border-radius: 50px;
    width: 56px;
    height: 56px;
    aspect-ratio: 1 / 1;
    object-fit: cover;
}

.rounded-image.large-size {
    width: 67px;
    height: 67px;
}

p.messages-count {
    width: 22px;
    height: 22px;
    background: var(--active-bg);
    border-radius: 50%;
    display: inline-flex;
    align-items: center;
    justify-content: center;
    line-height: 1;
    color: #fff;
}

.filters{
    padding: 0px 0 15px 0;
}

/* =====================
   CHAT AREA
   ===================== */

.chat-area {
    background: var(--bg);
    height: 96%;
    width: 100%;
    display: flex;
    flex-direction: column;
    overflow: hidden;
    padding: 10px 25px;
}

.chat-width {
    width: 100%;
    max-width: 865px;
    flex: 1;
    min-height: 0;
    display: flex;
    flex-direction: column;
}

.chat-header {
    border-radius: 135px;
    border: 1px solid rgba(255, 201, 122, 0.20);
    background: #FFF;
    box-shadow: 0 4px 20px 10px rgba(0, 0, 0, 0.05);
    height: 100px;
    padding: 15px;
    flex-shrink: 0;
}

.tag {
    border-radius: 100px;
    background: rgba(255, 201, 122, 0.13);
    border: 1px solid rgba(246, 168, 127, 0.15);
    background: #D9D9D9;
    color: #fff;
    padding: 6px 10px;
    text-align: center;
    font-family: "Lato";
    font-size: 14px;
    font-style: normal;
    font-weight: 400;
    line-height: normal;
    width: 100px;
}

.tag.groomer{
    background: var(--active-bg);
}
.arrow-svg {
    width: 48px;
    height: 48px;
    background: #C9DDA0;
    border-radius: 50%;
    display: inline-flex;
    align-items: center;
    justify-content: center;
    line-height: 1;
}

/* =====================
   MESSAGES LIST (scrolls)
   ===================== */

.messages {
    flex: 1;
    min-height: 0;
    overflow-y: auto;
    display: flex;
    flex-direction: column;
    gap: 16px;
    padding-bottom: 2%;

}

.messages::-webkit-scrollbar {
    display: none;
    /* Hide scrollbar for WebKit browsers */
}
/* Firefox */
.messages {
    scrollbar-width: none;
}

.messages.locked {
    opacity: 0.4;
}

.message.received {
    align-self: flex-start;
}

.received .bubble {
    background: var(--accent-soft);
    border-radius: 12px 12px 12px 0;
}

.bubble {
    padding: 12px 14px;
    font-size: 14px;
    line-height: 1.4;
}

.time {
    color: #D4D4D4;
    text-align: right;
    font-family: Lato;
    font-size: 14px;
    font-style: normal;
    font-weight: 600;
    line-height: normal;
    margin-top: 4px;
}

.message.sent {
    align-self: flex-end;
    text-align: right;
}

.sent .bubble {
    background: #fff;
    border-radius: 12px 12px 0 12px;
}

.quick-replies {
    color: #fff;
}

/* =====================
   CHAT INPUT BOX
   ===================== */

.chat-wrapper {
    max-width: 900px;
    flex-shrink: 0;
}

.chat-box {
    border: 1px solid var(--border);
    background: #FFF;
    border-radius: 16px;
}

.message-row {
    display: flex;
    gap: 12px;
    padding: 15px;
    align-items: center;
}

.message-input {
    flex: 1;
}

.message-input textarea {
    width: 100%;
    resize: none;
    border: none;
    outline: none;
    font-size: 16px;
    padding-top: 12px;
}

.message-input.locked textarea {
    min-height: 70px;
}

.send-btn {
    flex-shrink: 0;
    width: 44px;
    height: 44px;
    border-radius: 50%;
    border: none;
    background: var(--accent);
    color: #fff;
    font-size: 18px;
    cursor: pointer;
    display: flex;
    align-items: center;
    justify-content: center;
    opacity: 0.5;
}

.send-btn.active {
    opacity: 1;
}

.actions-row {
    display: flex;
    align-items: center;
    gap: 14px;
    font-size: 14px;
    color: var(--text-muted);
    border-radius: 0px 0px 14px 14px;
    border: 1px solid #E2E2E2;
    background: #F8F8F8;
    padding: 15px;
}

.action {
    display: flex;
    align-items: center;
    gap: 6px;
    cursor: pointer;
}

.action input {
    display: none;
}

.divider {
    height: 16px;
    width: 1px;
    background: var(--border);
}

.counter {
    margin-left: auto;
    font-size: 13px;
    color: var(--text-muted);
}

.overlay-text {
    padding: 12px 0;
}

.footer{
    padding: 0px !important;
}

.btn-active-bg {
    background: var(--active-bg);
}

